force-app/main/default/objects/leaseworks__Equipment__c/leaseworks__Equipment__c.object-meta.xml
<CustomObject>
    <description>The various sub components are tracked in this section using the ATA code. For example 21 is code for air conditioning, 22 for auto flight, 23 for communication, 24 for electrical power</description>
    <label>Equipment</label>
    <nameField>
        <label>Equipment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>