force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__ATA_Chapter_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ATA_Chapter_Name__c</fullName>
    <description>ATA Chapter Name</description>
    <inlineHelpText>ATA Chapter Name</inlineHelpText>
    <label>Z_Unused_2006 ATA Chapter Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>