force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__ATA_Text__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ATA_Text__c</fullName>
    <description>How various components are tracked. 21 - air con, 22 - auto flight, 23, communication, 24 - electrical power.</description>
    <label>ATA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>