force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Battery_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Battery_Exp_Date__c</fullName>
    <label>Battery Exp. Date</label>
    <type>Date</type>
</CustomField>