force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Buyer_Furnished_Equipment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Buyer_Furnished_Equipment__c</fullName>
    <description>Any equipment the buyer decides to integrate into the aircraft. For example seats, avionics etc.</description>
    <inlineHelpText>Any equipment the buyer decides to integrate into the aircraft. For example seats, avionics etc.</inlineHelpText>
    <label>Buyer Furnished Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>