force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__CSI__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSI__c</fullName>
    <label>CSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>