force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Hydrostatic_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hydrostatic_Date__c</fullName>
    <label>Hydrostatic Date</label>
    <type>Date</type>
</CustomField>