force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Overhaul_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Overhaul_Date__c</fullName>
    <label>Overhaul Date</label>
    <type>DateTime</type>
</CustomField>