force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Remark__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remark__c</fullName>
    <label>Remark</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>