force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Test_Date_Time__c</fullName>
    <label>Test Date/Time</label>
    <type>DateTime</type>
</CustomField>