force-app/main/default/objects/leaseworks__Equipment__c/fields/leaseworks__TSI_Install__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSI_Install__c</fullName>
    <label>Z_Unused Hours at Install</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>